tests/ui_fail/free_stmt.stderr
error[E0505]: cannot move out of `conn` because it is borrowed
  --> tests/ui_fail/free_stmt.rs:33:5
   |
28 |     let conn = connect_to_test_db(&env);
   |         ---- binding `conn` declared here
29 |
30 |     let (stmt, _) = SQLHSTMT::SQLAllocHandle(&conn);
   |                                              ----- borrow of `conn` occurs here
...
33 |     conn.SQLDisconnect();
   |     ^^^^ move out of `conn` occurs here
34 |     stmt.SQLFreeHandle();
   |     ---- borrow later used here
